# fcc-sc-time-calculator

./: .dir-locals.el  .gitignore  main.py  pyproject.toml  setup.cfg  test_module.py  time_calculator.py
